force-app/main/default/objects/blng__UsageSummary__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity (Available)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>