force-app/main/default/objects/blng__UsageSummary__c/fields/Quantity_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cumulative__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity (Cumulative)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>