force-app/main/default/objects/blng__UsageSummary__c/fields/Quantity_Excess__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Excess__c</fullName>
    <formula>MAX( blng__TotalQuantity__c - MAX( Quantity_Available__c ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (Excess)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>