force-app/main/default/objects/blng__UsageSummary__c/fields/Quantity_Leftover__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Leftover__c</fullName>
    <formula>MAX( Quantity_Available__c - blng__TotalQuantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (Leftover)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>